# hub-permissions-cli

./: .gitignore  Cargo.toml  Dockerfile  config.sample.json  readme.md  rust-toolchain.toml
.github/workflows/: cargo.yml  release.yml
src/: cli.rs  config.rs  db.rs  from_row.rs  keto.rs  main.rs  mod.rs  prelude.rs
src/organization/: credentials.rs  members.rs  mod.rs  owners.rs  webhooks.rs
src/project/: collections.rs  customers.rs  drops.rs  mints.rs  mod.rs
