[package]
name = "hub-permissions-cli"
version = "0.1.0"
publish = false
authors = [
  "Holaplex <engineering@holaplex.com>",
]
edition = "2021"
description = "Hub-Permissions management CLI"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-permissions-cli"
license = "AGPL-3.0-or-later"
keywords = ["hub", "holaplex", "web3", "cli", "permissions", "opa", "keto"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.8", features= ["with-uuid-1", "with-chrono-0_4"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.70"
uuid = { version = "1.3.1" , features = ["v4", "serde"] }
ory-keto-client = "0.11.0-alpha.0"
structopt = "0.3.26"
futures = "0.3.28"
url = { version = "2.3.1", features = ["serde"]}
once_cell = "1.17.1"
log = "0.4.17"
env_logger = "0.10.0"
chrono = { version = "0.4", features = ["serde"] }
